--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
-<!Doctype html>
+<!doctype html>
 <html lang="en">
-<head>
-	<title>Learning HTML and CSS</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-</head>
-
-<body>
+    <title>Hello, world!</title>
+  </head>
+  <body>
+  	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <a class="navbar-brand" href="#">Navbar w/ text</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarText">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Features</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Pricing</a>
+	      </li>
+	    </ul>
+	    <span class="navbar-text">
+	      Navbar text with an inline element
+	    </span>
+	  </div>
+	</nav>
+	<br><br>
+    <div class="container">
+	    	<div class="row">
+	    	<div class="col-4">
+	    		<div class="card" style="width: 18rem;">
+				  <img src="img/image1.jpeg" alt="bridge" height="300">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+	    	</div>
+	    	<div class="col-4">
+	    		<div class="card" style="width: 18rem;" >
+				  <img src="img/image1.jpeg" alt="bridge" height="300">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+	    	</div>
+	    	<div class="col-4">
+	    		<div class="card" style="width: 18rem;">
+				  <img src="img/image1.jpeg" alt="bridge"  height="300">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+	    	</div>
+    	</div>
+    	<br><br>
 	<h1>Hello World</h1>
 	<p class="para-1">
 		
@@ -21,13 +82,57 @@
 	</p>
 
 	<hr>
-	<a href="https://en.wikipedia.org/wiki/Apple_Inc." target="_blank">Go to website </a>
-	<img src="img/image1.jpeg" alt="bridge" width="300">
+	<div class="row">
+		<div class="col-6">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/s2jRKJ-ha5U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+		<div class="col-6">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/FsZ3p9gOkpY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+	</div>
 	<br>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/s2jRKJ-ha5U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Don&#39;t look now, but <a href="https://twitter.com/BostonDynamics?ref_src=twsrc%5Etfw">@BostonDynamics</a>&#39; robot Atlas is back. And now it can do parkour. <a href="https://t.co/bfizhHNLKZ">pic.twitter.com/bfizhHNLKZ</a></p>&mdash; WIRED (@WIRED) <a href="https://twitter.com/WIRED/status/1050453851206123520?ref_src=twsrc%5Etfw">October 11, 2018</a></blockquote>
+
+	<div class="container">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+		    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  </ol>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img class="d-block w-100" src="https://wallpapercave.com/wp/wc1705333.jpg" alt="First slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="https://i.pinimg.com/originals/cd/d4/fa/cdd4fa8117b2f0db609caaf0f855e82c.jpg" alt="Second slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="https://cdn.vox-cdn.com/thumbor/8A1nFZthigk1k3xYL15arRKtiDI=/0x0:3101x4481/1200x800/filters:focal(1172x1510:1668x2006)/cdn.vox-cdn.com/uploads/chorus_image/image/54729627/668950264.0.jpg" alt="Third slide">
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+	</div>
+	
+	
+	</div>
+
+
+
+
+
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
